--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.25",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
@@ -60,6 +60,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "react-resizable-panels": "^3.0.6",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -72,7 +73,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "baseline-browser-mapping": "^2.8.32",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "baseline-browser-mapping": "^2.9.2",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
