--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
     "embla-carousel-react": "^8.6.0",
+    "fumadocs-core": "^16.2.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.25",
