--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-menubar": "^1.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.14",
@@ -39,12 +40,14 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.90.7",
+    "@tanstack/react-table": "^8.21.3",
     "apexcharts": "^5.3.6",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "deepmerge": "^4.3.1",
     "embla-carousel-react": "^8.6.0",
     "fumadocs-core": "^16.2.3",
@@ -57,7 +60,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-apexcharts": "^1.8.0",
-    "react-day-picker": "^9.11.1",
+    "react-day-picker": "^9.12.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "react-resizable-panels": "^3.0.6",
